Fix UI bugs on mobile and adapt navbar padding

--- a/resources/scss/components/inputs.scss
+++ b/resources/scss/components/inputs.scss
@@ -1,20 +1,9 @@
 .input {
-    @apply max-w-xl p-4 shadow-sm block w-full border border-gray-400 rounded-md text-body-md font-medium bg-secondary text-white leading-8 transition-colors duration-300;
+    @apply max-w-xl p-4 shadow-sm block w-full border rounded-md text-body-md font-medium bg-secondary text-white leading-8 transition-colors duration-300;
 
+    @apply border-gray-400 opacity-100 #{!important};
     &:focus {
         @apply ring-tertiary border-tertiary outline-none;
-    }
-}
-
-.radio {
-    &-pick {
-        @apply h-6 w-6 text-white border-white;
-        &:focus {
-            @apply text-tertiary border-tertiary;
-        }
-    }
-    &-label {
-        @apply ml-3 block text-body-md font-semibold text-white;
     }
 }
 
